feat: update version

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "full-year-calendar-lib-app",
+  "name": "@emmanueldemey/full-year-calendar-lib-app",
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
@@ -8,8 +8,8 @@
     "build:lib": "ng build fullyearcalendar-lib",
     "pack": "cd dist/fullyearcalendar-lib && npm pack",
     "package": "npm run build:lib && npm run pack",
-    "copy-license": "copy .LICENSE .dist/fullyearcalendar-lib",
-    "copy-readme": "copy .README.md .dist/fullyearcalendar-lib",
+    "copy-license": "copy LICENSE dist/fullyearcalendar-lib",
+    "copy-readme": "copy README.md dist/fullyearcalendar-lib",
     "copy-files": "npm run copy-license && npm run copy-readme",
     "test-app": "ng test full-year-calendar-lib-app",
     "test-app-headless": "ng test full-year-calendar-lib-app --watch=false --browsers=ChromeHeadless",
@@ -45,10 +45,11 @@
     "@angular/cli": "~7.0.6",
     "@angular/compiler-cli": "~7.0.0",
     "@angular/language-service": "~7.0.0",
-    "@types/node": "~8.9.4",
     "@types/jasmine": "~2.8.8",
     "@types/jasminewd2": "~2.0.3",
+    "@types/node": "~8.9.4",
     "codelyzer": "~4.5.0",
+    "copy": "^0.3.2",
     "jasmine-core": "~2.99.1",
     "jasmine-spec-reporter": "~4.2.1",
     "karma": "~3.0.0",
